# pyatnitsa

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  DESIGN_v2.md  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  pyproject.toml  start.sh
pyatnitsa/: main.py
pyatnitsa/api/: admin.py  server.py
pyatnitsa/api/admin_web/: index.html
pyatnitsa/api/web/: index.html
pyatnitsa/channels/: channels.py
pyatnitsa/config/: agents.yaml  settings.py  settings_store.py
pyatnitsa/core/: agent.py  agent_registry.py  extractor.py  llm.py  models.py  sub_agent.py
pyatnitsa/memory/: conversations.py  events.py  files.py  store.py
pyatnitsa/scheduler/: heartbeat.py
pyatnitsa/skills/: base.py  skills.py
pyatnitsa/skills/examples/browser/: SKILL.md  browser.py  skill.py
pyatnitsa/skills/examples/calendar/: SKILL.md  calendar.py
pyatnitsa/skills/examples/files/: SKILL.md  files.py
pyatnitsa/skills/examples/mail/: SKILL.md  __init__.py  mail.py
pyatnitsa/skills/examples/redmine/: SKILL.md  redmine.py  skill.py
pyatnitsa/skills/examples/rusprofile/: SKILL.md  rusprofile.py
pyatnitsa/skills/examples/shortener/: SKILL.md  shortener.py  skill.py
