[project]
name = "pyatnitsa"
version = "0.1.0"
description = "Пятница.ai — AI-агент платформа для российского бизнеса"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    
    # LLM providers
    "gigachat>=0.1.0",
    
    # Channels
    # MAX: pip install git+https://github.com/max-messenger/max-botapi-python.git
    "aiogram>=3.0",              # Telegram fallback
    
    # Memory & Storage
    "aiosqlite>=0.20.0",
    
    # Scheduler
    "apscheduler>=3.10.0",
    
    # HTTP client
    "httpx>=0.27.0",
    
    # Browser automation (for integrations)
    "playwright>=1.40.0",
    
    # Utils
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
pyatnitsa = "pyatnitsa.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyatnitsa*"]

[tool.setuptools.package-data]
"pyatnitsa" = ["**/*.md"]
